--- a/website/docs/tutorial-basics/markdown-features.mdx
+++ b/website/docs/tutorial-basics/markdown-features.mdx
@@ -43,18 +43,18 @@ Let's see how to [Create a page](./create-a-page.md).
 
 Regular Markdown images are supported.
 
-You can use absolute paths to reference images in the static directory (`static/img/docusaurus.png`):
+You can use absolute paths to reference images in the static directory (`static/img/logo-128.png`):
 
 ```md
-![Docusaurus logo](/img/docusaurus.png)
+![Docusaurus logo](/img/logo-128.png)
 ```
 
-![Docusaurus logo](/img/docusaurus.png)
+![Docusaurus logo](/img/logo-128.png)
 
 You can reference images relative to the current file as well. This is particularly useful to colocate images close to the Markdown files using them:
 
 ```md
-![Docusaurus logo](./img/docusaurus.png)
+![Docusaurus logo](./img/logo-128.png)
 ```
 
 ## Code Blocks
@@ -64,14 +64,14 @@ Markdown code blocks are supported with Syntax highlighting.
 ````md
 ```jsx title="src/components/HelloDocusaurus.js"
 function HelloDocusaurus() {
-  return <h1>Hello, Docusaurus!</h1>;
+  return <h1>Hello, Docusaurus!</h1>
 }
 ```
 ````
 
 ```jsx title="src/components/HelloDocusaurus.js"
 function HelloDocusaurus() {
-  return <h1>Hello, Docusaurus!</h1>;
+  return <h1>Hello, Docusaurus!</h1>
 }
 ```
 
@@ -131,7 +131,7 @@ This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
 This is <Highlight color="#1877F2">Facebook blue</Highlight> !
 ```
 
-export const Highlight = ({children, color}) => (
+export const Highlight = ({ children, color }) => (
   <span
     style={{
       backgroundColor: color,
@@ -141,11 +141,12 @@ export const Highlight = ({children, color}) => (
       cursor: 'pointer',
     }}
     onClick={() => {
-      alert(`You clicked the color ${color} with label ${children}`);
-    }}>
+      alert(`You clicked the color ${color} with label ${children}`)
+    }}
+  >
     {children}
   </span>
-);
+)
 
 This is <Highlight color="#25c2a0">Docusaurus green</Highlight> !
 
