--- a/website/src/pages/releases/4-0-0.md
+++ b/website/src/pages/releases/4-0-0.md
@@ -26,7 +26,7 @@ This major release delivers a handful of improvements, refreshed UI, and [Manife
 
 - Configurable keyboard shortcuts for each tab range
 
-- Additional context menu actions to copy link, image, or video on a page
+- Additional context menu actions to copy a link, image, or video on a page
 
 - Refreshed UI
 
