--- a/website/src/pages/releases/4-0-0.md
+++ b/website/src/pages/releases/4-0-0.md
@@ -62,7 +62,7 @@ We have [plans to bring back counts](/roadmap#option-to-show-tab-count-badges-on
 
 ### Sticky format selections
 
-Previously, format selections in the popup would persist. In v4, the scope of a format selection during copy is limited to the next copy action.
+Previously, format selections in the popup would persist. In v4, the scope of a format selection when copying is limited to the next copy action.
 
 To change the default, secondary, or third format, go to Tab Copy Options and drag formats up or down to reorder them.
 
