fix links; add extension icon img

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -12,7 +12,7 @@ Tab Copy is a browser extension that lets you quickly copy open tabs to the clip
 
 ## Popup
 
-The main way to copy tabs is through the [popup](./category/popup) that appears when you click the Tab Copy icon.
+The main way to copy tabs is through the [popup](./popup) that appears when you click the Tab Copy icon ![extension icon](/img/logo-outline-black.png#light-mode-only)![extension icon](/img/logo-outline-white.png#dark-mode-only).
 
 <ThemedImage
   style={{
@@ -30,7 +30,7 @@ The main way to copy tabs is through the [popup](./category/popup) that appears 
 
 ## Context menu
 
-You can also copy the current tab, as well as links, images, or videos on a page, using the optional [Tab Copy submenu](./context-menu.md) in the context menu of web pages.
+You can also copy the current tab, as well as links, images, or videos on a page, using an optional [submenu](./context-menu) in the context menu of web pages.
 
 <ThemedImage
   style={{
@@ -48,7 +48,7 @@ You can also copy the current tab, as well as links, images, or videos on a page
 
 ## Keyboard shortcuts
 
-Power users can define their own [keyboard shortcuts](./keyboard-shortcuts.md) to copy tabs.
+Power users can define their own [keyboard shortcuts](./keyboard-shortcuts) to copy tabs.
 
 <ThemedImage
   style={{
