--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -36,12 +36,11 @@ You can also copy the current tab, as well as links, images, or videos on a page
   style={{
     width:'378px',
     height:'auto',
-    margin:'6px 10px 0',
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/context-menu-light.png'),
-    dark: useBaseUrl('/img/context-menu-dark.png'),
+    light: useBaseUrl('/img/context-menu-copy-as-light.png'),
+    dark: useBaseUrl('/img/context-menu-copy-as-dark.png'),
   }}
   alt="Context menu"
 />
