--- a/website/docs/popup/format-selector.mdx
+++ b/website/docs/popup/format-selector.mdx
@@ -23,7 +23,7 @@ The format selector at the bottom of the popup shows the active format.
   alt="Format selector copy as"
 />
 
-To change the active format, click the format selector to expand it and select from one of the available formats.
+To change the active format, click the format selector to expand it and select from one of the available formats. Available formats are shown according to the visibility and order of formats customized in [Tab Copy options](../options#formats).
 
 <ThemedImage
   style={{
