--- a/website/docs/options.mdx
+++ b/website/docs/options.mdx
@@ -55,7 +55,7 @@ Read more about [keyboard shortcuts and how to edit them](./keyboard-shortcuts).
 
 ### Copy buttons
 
-Each button in the Tab Copy popup copies a particular range of tabs.
+Each [button](./popup/copy-buttons) in the Tab Copy [popup](./popup) copies a particular range of tabs.
 
 You can hide buttons you don't use by clicking the corresponding tile in the **Copy buttons** section of the options page.
 
@@ -97,7 +97,7 @@ The **Formats** section of the options page lists all built-in and custom format
 
 #### Visibility
 
-Clicking a format's tile toggles its visibility in the app. When a format is hidden, it won't show up in the [popup format selector](./popup/format-selector) or [context menus](./context-menu).
+Clicking a format's tile toggles its visibility in the app. When a format is hidden, it won't show up in the [popup format selector](./popup/format-selector) or [context menu](./context-menu).
 
 :::info Minimum visible formats
 At least 3 formats must remain visible
@@ -107,7 +107,7 @@ At least 3 formats must remain visible
 
 To change the order of formats, drag and drop format tiles up or down to a new position.
 
-This changes the order in which formats are displayed in the [popup format selector](./popup/format-selector) and [context menus](./context-menu).
+This changes the order in which formats are displayed in the [popup format selector](./popup/format-selector) and [context menu](./context-menu).
 
 Re-ordering also allows for the assignment of the *default*, *secondary*, and *third* formats. The top visible format, for example, is considered the *default* format. See [Formats](./formats#format-order) for more about format order.
 
