--- a/website/docs/keyboard-shortcuts.mdx
+++ b/website/docs/keyboard-shortcuts.mdx
@@ -23,7 +23,7 @@ To set keyboard shortcuts:
 
 1. Right-click the Tab Copy extension icon ![extension icon](/img/logo-outline-black.png#light-mode-only)![extension icon](/img/logo-outline-white.png#dark-mode-only), then click **Options**
 
-1. Click the **Edit keyboard shortcuts...** button on the Options page. This opens the browser's **Keyboard shortcuts** page.
+1. Click the **Edit keyboard shortcuts...** button on the options page. This opens the browser's **Keyboard shortcuts** page.
 
 1. Scroll to the Tab Copy card
 
