--- a/website/src/pages/releases/4-0-0.md
+++ b/website/src/pages/releases/4-0-0.md
@@ -6,27 +6,27 @@ This major release delivers a handful of improvements, refreshed UI, and [Manife
 
 ## Features
 
-- Full customization of visibility and ordering of formats available in the popup
+- Full customization of [visibility and ordering of formats](/docs/options#formats) available in the popup
 
-- Ability to include window groupings ("All windows and tabs" button)
+- Ability to include window groupings (new ["All windows and tabs" button](/docs/popup/copy-buttons))
 
-- Ability to customize individual copy button visibility
+- Ability to customize individual [copy button visibility](/docs/options#copy-buttons)
 
-- Availability of key modifiers when copying
+- Availability of [modifier keys](/docs/popup/format-selector#format-modifier-keys) when copying
 
-  - Hold `Ctrl` or `Cmd` to apply the secondary format
+  - Hold `Ctrl` or `Cmd` to apply the [secondary format](/docs/formats/#secondary-format)
 
-  - Hold `Shift + Ctrl` or `Shift + Cmd` to apply the third format
+  - Hold `Shift + Ctrl` or `Shift + Cmd` to apply the [third format](/docs/formats/#third-format)
 
-- More format options
+- More [format options](/docs/options#format-options)
 
-  - **JSON** properties and layout
+  - [JSON](/docs/formats/built-in-formats#json) properties and layout
 
-  - **Link** plaintext fallback
+  - [Link](/docs/formats/built-in-formats#link) plaintext fallback
 
-- Configurable keyboard shortcuts for each tab range
+- Configurable [keyboard shortcuts](/docs/keyboard-shortcuts) for each tab range
 
-- Additional context menu actions to copy a link, image, or video on a page
+- Additional [context menu](/docs/context-menu) actions to copy a link, image, or video on a page
 
 - Refreshed UI
 
@@ -40,25 +40,25 @@ This major release delivers a handful of improvements, refreshed UI, and [Manife
 
 ### Simple mode
 
-This mode allowed for the extension icon to be single, double, or triple-clicked to copy the current tab, the tabs in the current window, or all tabs, respectively. It also included a corresponding keyboard shortcut that worked similarly.
+This mode previously allowed for the extension icon to be single, double, or triple-clicked to copy the current tab, the tabs in the current window, or all tabs, respectively. It also included a corresponding keyboard shortcut that worked similarly.
 
 #### Why remove this?
 
-We made a strategic decision to remove this feature due primarily to very low usage. We'd like to keep the user experience and code lean and focused on the features our users are most actively engaging with.
+We made a strategic decision to remove this feature due primarily to low usage. We'd like to keep the user experience and code lean and focused on the features our users are most actively engaging with.
 
 An additional consideration was that the value of this feature seemed somewhat questionable since the time it takes to move the mouse cursor over the extension icon to click it often significantly exceeds the time it takes for an additional nearby click.
 
-Finally, this interaction paradigm didn't scale well. With the introduction of the "All windows and tabs" range in v4, the potential number of clicks or keyboard shortcut repetitions has been raised to 4. Having to repeat a click or shortcut 4 times to copy tends to be awkward, error-prone, and inefficient.
+Finally, this interaction paradigm didn't scale well. With the introduction of the ["All windows and tabs" range](/docs/popup/copy-buttons) in v4, the potential number of clicks or keyboard shortcut repetitions has been raised to 4. Having to repeat a click or shortcut 4 times to copy tends to be awkward, error-prone, and inefficient.
 
 That said, we understand that some users have developed a preference for this feature. If you are one of these folks, we apologize for the disruption to your workflow.
 
-If speed is your priority, we've added a set of keyboard shortcuts you can configure as desired. See the "Keyboard shortcuts" section in the [usage docs](/docs).
+If efficiency is your priority, we've added a set of [keyboard shortcuts](/docs/keyboard-shortcuts) you can configure as desired.
 
 ### Tab counts
 
 Copy button labels used to include the count of tabs for their corresponding range. This peripheral information has been removed for simplicity.
 
-We have [plans to bring back counts](/roadmap#option-to-show-tab-count-badges-on-copy-buttons) as optional button badges in a future release.
+There are [plans to bring back counts](/roadmap#option-to-show-tab-count-badges-on-copy-buttons) as optional button badges in a future release.
 
 ### Sticky format selections
 
@@ -74,4 +74,4 @@ This is somewhat of an edge case distinction since the fallback is only applied 
 
 This was changed since a URL is typically more useful than a tab title.
 
-On a related note, the plaintext fallback for the **Link** format can now be customized. It is **URL** by default for new installs and **Title** for those migrating from Tab Copy v3.
+On a related note, the plaintext fallback for the [Link](/docs/formats/built-in-formats#link) format can now be customized. It is **URL** by default for new installs and **Title** for those migrating from Tab Copy v3.
