add links; eliminate redundancy

--- a/website/src/pages/donate.mdx
+++ b/website/src/pages/donate.mdx
@@ -1,18 +1,8 @@
 # Like Tab Copy? ❤️
 
-If you enjoy using Tab Copy, why not let us know by [rating it](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews) and considering a donation.
+If you're finding Tab Copy useful, why not let us know by [rating it](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews) or considering a donation to help us keep [improving](./roadmap) and [maintaining](/docs/development) it.
 
-## Rate
-
-[Click here to rate Tab Copy](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews)
-
-It's a great way to motivate us and only takes a few seconds :)
-
-## Donate
-
-If you've been finding Tab Copy useful, we'd be grateful if you'd consider supporting our efforts with a donation to help us keep improving and maintaining this project.
-
-*Thank you for your support!*
+*Every donation makes a difference.*
 
 ### Bitcoin
 
