--- a/website/src/pages/donate.mdx
+++ b/website/src/pages/donate.mdx
@@ -1,9 +1,18 @@
+import CryptoAddress from '@site/src/components/CryptoAddress'
+import BuyMeACoffee from '@site/src/components/BuyMeACoffee'
+
 # Like Tab Copy? ❤️
 
-If you're finding Tab Copy useful, why not let us know by [rating it](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews) or considering a donation to help us keep [improving](./roadmap) and [maintaining](/docs/development) it.
+If you find Tab Copy useful, why not let us know by [rating it](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews) or considering a donation option below to help us keep [improving](./roadmap) and [maintaining](/docs/development) it.
 
 *Every donation makes a difference.*
 
-### Bitcoin
+<CryptoAddress
+  currency="Bitcoin"
+  address="bc1qfqje8mekvnyemna5a8mm60qzfw36ja7kenypaj"
+  qrCode="/img/bitcoin-bc1qfqje8mekvnyemna5a8mm60qzfw36ja7kenypaj.png"
+/>
 
-`1FxH1VrdE6KN1gNWbBV6GumUqoTVgdbuYr`
+<BuyMeACoffee
+  username="hansifer"
+/>
