--- a/website/src/pages/donate.mdx
+++ b/website/src/pages/donate.mdx
@@ -1,6 +1,8 @@
 import CryptoAddress from '@site/src/components/CryptoAddress'
 import BuyMeACoffee from '@site/src/components/BuyMeACoffee'
 
+<div className="centeredPage">
+
 # Like Tab Copy? ❤️
 
 If you find Tab Copy useful, why not let us know by [rating it](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews) or considering a donation option below to help us keep [improving](./roadmap) and [maintaining](/docs/development) it.
@@ -16,3 +18,5 @@ If you find Tab Copy useful, why not let us know by [rating it](https://chromewe
 <BuyMeACoffee
   username="hansifer"
 />
+
+</div>
