--- a/website/docs/options.mdx
+++ b/website/docs/options.mdx
@@ -11,19 +11,19 @@ To access Tab Copy options, do one of the following:
 
 - Right-click the Tab Copy extension icon ![extension icon](/img/logo-outline-black.png#light-mode-only)![extension icon](/img/logo-outline-white.png#dark-mode-only) in the browser toolbar, then click **Options**
 
-- Click the **Options** icon in the upper-left corner of the Tab Copy [popup](./popup)
+- Click the **Options** icon in the upper-left corner of the Tab Copy [popup](./popup/index.mdx)
 
 This will open the Tab Copy options page in a new tab.
 
 ### Keep format selector expanded
 
-Checking this option keeps the [format selector](./popup/format-selector) of the popup open, always showing all available formats.
+Checking this option keeps the [format selector](./popup/format-selector.mdx) of the popup open, always showing all available formats.
 
 This can be useful if you frequently switch between a small set of formats.
 
 ### Show context menu
 
-Selecting this option adds a Tab Copy item to the [context menu](./context-menu) of web pages.
+Selecting this option adds a Tab Copy item to the [context menu](./context-menu.mdx) of web pages.
 
 When this option is checked, you can also choose whether to show a submenu for selecting a format instead of always using the default format.
 
@@ -31,7 +31,7 @@ When this option is checked, you can also choose whether to show a submenu for s
 
 This option allows you to omit pinned tabs from the tabs that are copied.
 
-Read more about [tab filtering](./tab-filtering).
+Read more about [tab filtering](./tab-filtering.md).
 
 ### Notify on copy
 
@@ -39,7 +39,7 @@ When this option is checked, a toast notification appears after tabs are copied 
 
 Note that toast notifications require elevated permissions, so the browser may prompt you to grant Tab Copy the ability to show notifications when attempting to enable this option. If you deny this permission, this option will not get turned on.
 
-Read more about [notifications](./notification).
+Read more about [notifications](./notification.md).
 
 ### Invert icon color
 
@@ -51,11 +51,11 @@ In some rare cases, browser theme customizations may prevent Tab Copy from autom
 
 Click the **Edit keyboard shortcuts...** button to open the browser's **Keyboard shortcuts** page.
 
-Read more about [keyboard shortcuts and how to edit them](./keyboard-shortcuts).
+Read more about [keyboard shortcuts and how to edit them](./keyboard-shortcuts.mdx).
 
 ### Copy buttons
 
-Each [button](./popup/copy-buttons) in the Tab Copy [popup](./popup) copies a particular range of tabs.
+Each [button](./popup/copy-buttons.md) in the Tab Copy [popup](./popup/index.mdx) copies a particular range of tabs.
 
 You can hide buttons you don't use by clicking the corresponding tile in the **Copy buttons** section of the options page.
 
@@ -97,7 +97,7 @@ The **Formats** section of the options page lists all built-in and custom format
 
 #### Visibility
 
-Clicking a format's tile toggles its visibility in the app. When a format is hidden, it won't show up in the [popup format selector](./popup/format-selector) or [context menu](./context-menu).
+Clicking a format's tile toggles its visibility in the app. When a format is hidden, it won't show up in the [popup format selector](./popup/format-selector.mdx) or [context menu](./context-menu.mdx).
 
 :::info Minimum visible formats
 At least 3 formats must remain visible
@@ -107,9 +107,9 @@ At least 3 formats must remain visible
 
 To change the order of formats, drag and drop format tiles up or down to a new position.
 
-This changes the order in which formats are displayed in the [popup format selector](./popup/format-selector) and [context menu](./context-menu).
+This changes the order in which formats are displayed in the [popup format selector](./popup/format-selector.mdx) and [context menu](./context-menu.mdx).
 
-Re-ordering also allows for the assignment of the *default*, *secondary*, and *third* formats. The top visible format, for example, is considered the *default* format. See [Formats](./formats#format-order) for more about format order.
+Re-ordering also allows for the assignment of the *default*, *secondary*, and *third* formats. The top visible format, for example, is considered the *default* format. See [Formats](./formats/index.md#format-order) for more about format order.
 
 #### Format options
 
