--- a/website/docs/popup/format-selector.mdx
+++ b/website/docs/popup/format-selector.mdx
@@ -23,7 +23,7 @@ The format selector at the bottom of the popup shows the active format.
   alt="Format selector copy as"
 />
 
-To change the active format, click the format selector to expand it and select from one of the available formats. Available formats are shown according to the visibility and order of formats customized in [Tab Copy options](../options#formats).
+To change the active format, click the format selector to expand it and select from one of the available formats. Available formats are shown according to the visibility and order of formats customized in [Tab Copy options](../options.mdx#formats).
 
 <ThemedImage
   style={{
@@ -55,13 +55,13 @@ When selecting a format that is different from the default format, the format la
   alt="Format selector copy 1x as"
 />
 
-You can change the default format and personalize which formats are made available in [Tab Copy options](../options#formats).
+You can change the default format and personalize which formats are made available in [Tab Copy options](../options.mdx#formats).
 
-Read more about [Formats](../formats).
+Read more about [Formats](../formats/index.md).
 
 ## Keeping the selector expanded
 
-If you prefer to keep the format selector expanded so you don't always have to click to expand it, check **Keep format selector expanded** in [Tab Copy options](../options#keep-format-selector-expanded).
+If you prefer to keep the format selector expanded so you don't always have to click to expand it, check **Keep format selector expanded** in [Tab Copy options](../options.mdx#keep-format-selector-expanded).
 
 This can be useful if you commonly switch between a small set of formats.
 
@@ -87,4 +87,4 @@ When holding down format modifier keys, the displayed format updates and its lab
   alt="Format selector copy 1x as"
 />
 
-You can change the default, secondary, and third format by re-ordering formats in [Tab Copy options](../options#formats).
+You can change the default, secondary, and third format by re-ordering formats in [Tab Copy options](../options.mdx#formats).
