--- a/website/docs/popup/index.mdx
+++ b/website/docs/popup/index.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Popup
 
-The Tab Copy popup provides [copy buttons](./copy-buttons) and a [format selector](./format-selector).
+The Tab Copy popup provides [copy buttons](./copy-buttons.md) and a [format selector](./format-selector.mdx).
 
 It can be accessed by clicking the Tab Copy icon ![extension icon](/img/logo-outline-black.png#light-mode-only)![extension icon](/img/logo-outline-white.png#dark-mode-only) in the browser toolbar.
 
