--- a/website/docs/index.mdx
+++ b/website/docs/index.mdx
@@ -12,7 +12,7 @@ Tab Copy is a browser extension that lets you quickly copy open tabs to the clip
 
 ## Popup
 
-The main way to copy tabs is through the [popup](./popup) that appears when you click the Tab Copy icon ![extension icon](/img/logo-outline-black.png#light-mode-only)![extension icon](/img/logo-outline-white.png#dark-mode-only).
+The main way to copy tabs is through the [popup](./popup/index.mdx) that appears when you click the Tab Copy icon ![extension icon](/img/logo-outline-black.png#light-mode-only)![extension icon](/img/logo-outline-white.png#dark-mode-only).
 
 <ThemedImage
   style={{
@@ -30,7 +30,7 @@ The main way to copy tabs is through the [popup](./popup) that appears when you 
 
 ## Context menu
 
-You can also copy the current tab, as well as links, images, or videos on a page, using an optional [submenu](./context-menu) in the context menu of web pages.
+You can also copy the current tab, as well as links, images, or videos on a page, using an optional [submenu](./context-menu.mdx) in the context menu of web pages.
 
 <ThemedImage
   style={{
@@ -47,7 +47,7 @@ You can also copy the current tab, as well as links, images, or videos on a page
 
 ## Keyboard shortcuts
 
-Power users can define their own [keyboard shortcuts](./keyboard-shortcuts) to copy tabs.
+Power users can define their own [keyboard shortcuts](./keyboard-shortcuts.mdx) to copy tabs.
 
 <ThemedImage
   style={{
