add "in progress" status

--- a/website/src/pages/roadmap.mdx
+++ b/website/src/pages/roadmap.mdx
@@ -1,12 +1,18 @@
+import Status from '@site/src/components/Status'
+
 # Feature roadmap
 
 Below are some features we plan to roll out in the future.
 
 Please consider [making a donation](/donate) to help us get there. Your support makes a huge difference!
 
-### One-click copy
+### Tab counts<Status state='in-progress' />
 
-Allow copying tabs immediately with a single click on the extension icon instead of opening a popup. Uses default tab range and format (configurable in [options](/docs/options)).
+Adds optional badges on copy buttons that let you know how many tabs will be copied.
+
+### One-click copy<Status state='in-progress' />
+
+Allows copying tabs immediately with a single click on the extension icon instead of opening a popup. Uses default tab range and format (configurable in [options](/docs/options)).
 
 ### Cloud-based clipboard
 
@@ -43,10 +49,6 @@ Includes the addition of conditionals and functions.
 ### Tab group support
 
 Enables optionally including tab groups when copying tabs.
-
-### Option to show tab count badges on copy buttons
-
-Lets you know how many tabs will be copied before you copy.
 
 ### Additional built-in formats
 
