--- a/website/src/pages/releases/4-0-0.md
+++ b/website/src/pages/releases/4-0-0.md
@@ -56,9 +56,9 @@ If efficiency is your priority, we've added a set of [keyboard shortcuts](/docs/
 
 ### Tab counts
 
-Copy button labels used to include the count of tabs for their corresponding range. This peripheral information has been removed for simplicity.
+Copy button labels used to include the count of tabs for their corresponding range. This supplemental information has been removed for simplicity.
 
-There are [plans to bring back counts](/roadmap#option-to-show-tab-count-badges-on-copy-buttons) as optional button badges in a future release.
+Work is currently underway to bring back [counts as optional button badges](/roadmap#tab-counts).
 
 ### Sticky format selections
 
