update status badges for completed items

--- a/website/src/pages/roadmap.mdx
+++ b/website/src/pages/roadmap.mdx
@@ -6,11 +6,11 @@ Below are some features we plan to roll out in the future.
 
 Please consider [making a donation](/donate) to help us get there. Your support makes a huge difference!
 
-### Tab counts<Status state='in-progress' />
+### Tab counts<Status state='done' text='Shipped v4.1' />
 
 Adds optional badges on copy buttons that let you know how many tabs will be copied.
 
-### One-click copy<Status state='in-progress' />
+### One-click copy<Status state='done' text='Shipped v4.1' />
 
 Allows copying tabs immediately with a single click on the extension icon instead of opening a popup. Uses default tab range and format (configurable in [options](/docs/options)).
 
