update link; add feature; add deprecation updates

--- a/website/src/pages/releases/4-0-0.md
+++ b/website/src/pages/releases/4-0-0.md
@@ -10,7 +10,7 @@ This major release delivers a handful of improvements, refreshed UI, and [Manife
 
 - Ability to include window groupings (new ["All windows and tabs" button](/docs/popup/copy-buttons))
 
-- Ability to customize individual [copy button visibility](/docs/options#copy-buttons)
+- Ability to customize individual [copy button visibility](/docs/options#ranges)
 
 - Availability of [modifier keys](/docs/popup/format-selector#format-modifier-keys) when copying
 
@@ -36,6 +36,8 @@ This major release delivers a handful of improvements, refreshed UI, and [Manife
 
 - [Manifest v3](https://developer.chrome.com/docs/extensions/develop/migrate/what-is-mv3) compliance
 
+- New [web site](https://tabcopy.com)
+
 ## Deprecations
 
 ### Simple mode
@@ -54,11 +56,13 @@ That said, we understand that some users have developed a preference for this fe
 
 If efficiency is your priority, we've added a set of [keyboard shortcuts](/docs/keyboard-shortcuts) you can configure as desired.
 
+**UPDATE:** after further consideration and an assessment of the effort, the ability to [enable or disable the popup](/docs/options#enable-popup) was added in [v4.1.0](/releases/4-1-0). When the popup is disabled, clicking the extension icon copies tabs immediately with the default range and format (configurable in [options](/docs/options)). This is similar to "simple mode" in v3 with the exception that it does not support multi click range selection.
+
 ### Tab counts
 
 Copy button labels used to include the count of tabs for their corresponding range. This supplemental information has been removed for simplicity.
 
-Work is currently underway to bring back [counts as optional button badges](/roadmap#tab-counts).
+**UPDATE:** an option was added in [v4.1.0](/releases/4-1-0) to [show counts as button badges](/docs/options#show-tab-counts).
 
 ### Sticky format selections
 
