remove heart emoji; tweak text

--- a/website/src/pages/donate/index.mdx
+++ b/website/src/pages/donate/index.mdx
@@ -2,11 +2,11 @@ import DonateButtons from '@site/src/components/Donate/DonateButtons'
 
 <div className="centeredPage">
 
-# Like Tab Copy? <span style={{filter: 'hue-rotate(335deg)', fontSize: 28}}>❤️</span>
+# Like Tab Copy?
 
-If you find Tab Copy useful, why not let us know by [rating it](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews) or considering a donation option below to help us keep [improving](/roadmap) and [maintaining](/docs/development) it.
+If you find Tab Copy useful, why not let us know by [rating it](https://chromewebstore.google.com/detail/tab-copy/micdllihgoppmejpecmkilggmaagfdmb/reviews) and considering a donation option below to enable us to keep [improving](/roadmap) and [maintaining](/docs/development) it.
 
-*Every donation makes a difference!*
+*Thank you for your support!*
 
 <DonateButtons />
 
