cache-bust updated images

--- a/website/docs/context-menu.mdx
+++ b/website/docs/context-menu.mdx
@@ -17,7 +17,7 @@ Tab Copy adds an item to the browser's web page context menu that can be used to
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/context-menu-copy-light.png'),
+    light: useBaseUrl('/img/context-menu-copy-light.png?v=4-1-0'),
     dark: useBaseUrl('/img/context-menu-copy-dark.png'),
   }}
   alt="Context menu"
@@ -35,7 +35,7 @@ When this option is enabled, you can also choose whether to show a format select
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/context-menu-copy-as-light.png'),
+    light: useBaseUrl('/img/context-menu-copy-as-light.png?v=4-1-0'),
     dark: useBaseUrl('/img/context-menu-copy-as-dark.png'),
   }}
   alt="Context menu copy as"
@@ -50,7 +50,7 @@ When right-clicking a link or image on a page, the menu presents additional opti
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/context-menu-copy-subjects-light.png'),
+    light: useBaseUrl('/img/context-menu-copy-subjects-light.png?v=4-1-0'),
     dark: useBaseUrl('/img/context-menu-copy-subjects-dark.png'),
   }}
   alt="Context menu copy subjects"
