--- a/website/docs/index.mdx
+++ b/website/docs/index.mdx
@@ -22,8 +22,8 @@ The main way to copy tabs is through the [popup](./popup/index.mdx) that appears
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/popup-light.png'),
-    dark: useBaseUrl('/img/popup-dark-lightened.png'),
+    light: useBaseUrl('/img/popup-light.png?v=4-1-0'),
+    dark: useBaseUrl('/img/popup-dark-lightened.png?v=4-1-0'),
   }}
   alt="Popup"
 />
@@ -39,7 +39,7 @@ You can also copy the current tab, as well as links, images, or videos on a page
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/context-menu-copy-as-light.png'),
+    light: useBaseUrl('/img/context-menu-copy-as-light.png?v=4-1-0'),
     dark: useBaseUrl('/img/context-menu-copy-as-dark.png'),
   }}
   alt="Context menu"
@@ -57,8 +57,8 @@ Power users can define their own [keyboard shortcuts](./keyboard-shortcuts.mdx) 
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/keyboard-shortcuts-light.png'),
-    dark: useBaseUrl('/img/keyboard-shortcuts-dark.png'),
+    light: useBaseUrl('/img/keyboard-shortcuts-light.png?v=4-1-0'),
+    dark: useBaseUrl('/img/keyboard-shortcuts-dark.png?v=4-1-0'),
   }}
   alt="Keyboard shortcuts"
 />
