--- a/website/docs/keyboard-shortcuts.mdx
+++ b/website/docs/keyboard-shortcuts.mdx
@@ -37,8 +37,8 @@ To set keyboard shortcuts:
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/keyboard-shortcuts-light.png'),
-    dark: useBaseUrl('/img/keyboard-shortcuts-dark.png'),
+    light: useBaseUrl('/img/keyboard-shortcuts-light.png?v=4-1-0'),
+    dark: useBaseUrl('/img/keyboard-shortcuts-dark.png?v=4-1-0'),
   }}
   alt="Keyboard shortcuts"
 />
