--- a/website/docs/popup/index.mdx
+++ b/website/docs/popup/index.mdx
@@ -20,8 +20,8 @@ It can be accessed by clicking the Tab Copy icon ![extension icon](/img/logo-out
     filter:'drop-shadow(2px 4px 10px #0000005e)',
   }}
   sources={{
-    light: useBaseUrl('/img/popup-light.png'),
-    dark: useBaseUrl('/img/popup-dark-lightened.png'),
+    light: useBaseUrl('/img/popup-light.png?v=4-1-0'),
+    dark: useBaseUrl('/img/popup-dark-lightened.png?v=4-1-0'),
   }}
   alt="Popup"
 />
