--- a/website/docs/context-menu.mdx
+++ b/website/docs/context-menu.mdx
@@ -23,7 +23,7 @@ Tab Copy adds an item to the browser's web page context menu that can be used to
   alt="Context menu"
 />
 
-This menu item can be enabled or disabled in [Tab Copy options](./options.mdx#show-context-menu).
+This menu item can be enabled or disabled in [Tab Copy options](./options.mdx#enable-context-menu).
 
 When this option is enabled, you can also choose whether to show a format selection submenu instead of simply applying the default format. Formats are shown according to the visibility and order of formats as customized in [Tab Copy options](./options.mdx#formats).
 
