rename range "All windows and tabs" to "All tabs by window"

--- a/website/docs/formats/custom-formats.mdx
+++ b/website/docs/formats/custom-formats.mdx
@@ -58,7 +58,7 @@ The template fields are:
 - **End**: footer text for the entire output.
 
 :::note Window template fields
-Text in **Window start**, **Window end**, and **Window delimiter** fields is only included when copying **All windows and tabs**.
+Text in **Window start**, **Window end**, and **Window delimiter** fields is only included when copying **All tabs by window**.
 :::
 
 ### Tokens
@@ -100,7 +100,7 @@ The following tokens are currently supported:
 \* *Depending on the paste destination.*
 
 :::note window tab sequence fallback
-**window tab #** falls back to **tab #** when copying any range *other than* **All windows and tabs**.
+**window tab #** falls back to **tab #** when copying any range *other than* **All tabs by window**.
 :::
 
 ## Deleting custom formats
