--- a/website/src/pages/releases/4-1-0.md
+++ b/website/src/pages/releases/4-1-0.md
@@ -22,10 +22,10 @@ A new [show tab counts](/docs/options#show-tab-counts) option is now available t
 
 - Icons linking to docs and the donations page have been added to the popup header. Header icons [can be hidden](/docs/options#show-header-icons) in options.
 
-- Links to docs, the GitHub repo, ratings, and donations have been added to the Options page
+- Links to docs, the GitHub repo, ratings, and donations have been added to the options page
 
-- An onboarding message has been added for new users with links to the usage guide and Options page
+- An onboarding message has been added for new users with links to the usage guide and options page
 
 - The range "All windows and tabs" has been changed to "All tabs by window" for clarity
 
-- "Copy Buttons" on the Options page has been changed to "Ranges" as they now also apply to one-click copy mode
+- "Copy Buttons" on the options page has been changed to "Ranges" as they now also apply to one-click copy mode
