cache-bust updated images

--- a/website/docs/options.mdx
+++ b/website/docs/options.mdx
@@ -95,8 +95,8 @@ When the popup is disabled, the top checked range is the default range used for 
     filter:'drop-shadow(2px 4px 10px #00000018)',
   }}
   sources={{
-    light: useBaseUrl('/img/copy-buttons-toggled-light.png'),
-    dark: useBaseUrl('/img/copy-buttons-toggled-dark.png'),
+    light: useBaseUrl('/img/copy-buttons-toggled-light.png?v=4-1-0'),
+    dark: useBaseUrl('/img/copy-buttons-toggled-dark.png?v=4-1-0'),
   }}
   alt="Ranges"
 />
