--- a/website/docs/options.mdx
+++ b/website/docs/options.mdx
@@ -81,7 +81,7 @@ Read more about [keyboard shortcuts and how to edit them](./keyboard-shortcuts.m
 
 ### Ranges
 
-Each [button](./popup/copy-buttons.md) in the Tab Copy [popup](./popup/index.mdx) copies a particular range of tabs.
+Each [button](./popup/copy-buttons.mdx) in the Tab Copy [popup](./popup/index.mdx) copies a particular range of tabs.
 
 You can hide buttons you don't use by unchecking the corresponding tile in the **Ranges** section of the options page.
 
