add content for one-click copy

--- a/website/docs/index.mdx
+++ b/website/docs/index.mdx
@@ -28,6 +28,10 @@ The main way to copy tabs is through the [popup](./popup/index.mdx) that appears
   alt="Popup"
 />
 
+## One-click copy
+
+If you only ever copy tabs using the same range and format, you can disable the popup and [copy tabs with a single click](./one-click-copy.mdx).
+
 ## Context menu
 
 You can also copy the current tab, as well as links, images, or videos on a page, using an optional [submenu](./context-menu.mdx) in the context menu of web pages.
